tests/derivation/core/norec t-p.--.. w_ext 002/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Name `a` is used in target's type, but is not a generated or given parameter (goes after the fuel argument); did you forget to add one?

DerivedGen:1
 06 | 
 07 | %language ElabReflection
 08 | 
 09 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty b) => (Fuel -> Gen MaybeEmpty a) => Gen MaybeEmpty (a, b)
 10 | checkedGen = deriveGen
      ^^^^^^^^^^^^^^^^^^^^^^

